feat(massive-search): report selettivi, template perimetro da header, perimetro su DB e anagrafiche payment_method/touchpoint
- Selezione dei report da produrre (POSITION/TOKEN/TRANSFER) via search_instance.selected_reports
- Rinomina ATTEMPT -> TOKEN nella nomenclatura dei report
- Deduzione del template del perimetro dall'header CSV (NAV;EC, IUV;EC, NAV, IUV, Token)
- Perimetro CSV salvato inline su DB (search_perimeter_file.content) invece che su blob
- Nuove anagrafiche ANAG_PAYMENT_METHOD e ANAG_TOUCHPOINT popolate incrementalmente per la lookup dei filtri BE
- Test aggiuntivi e allineamenti Modernizer